# viznotes

./: #flake.nix#  .#flake.nix  .gitignore  README.md  build-appimage.sh  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  style.css  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AreaLayer.vue  ArrowLayer.vue  Breadcrumbs.vue  CanvasView.vue  FormatBar.vue  ImageNodeView.vue  LoudnessDialog.vue  Minimap.vue  NoteComponent.vue  NoteContainer.vue  NoteLinks.vue  NoteSearch.vue  NoteTextSection.vue  PinnedPanel.vue  SettingsPanel.vue  Sidebar.vue  SplitView.vue  SplitView.vue~  VaultPicker.vue
src/composables/: useBoxSelection.ts  useCanvas.ts  useDrag.ts  useResize.ts
src/extensions/: TiptapImage.ts  TrailingParagraph.ts
src/storage/: file.ts  index.ts  interface.ts
src/stores/: app.ts  arrows.ts  clipboard.ts  editor.ts  generators.ts  history.ts  links.ts  notes.ts  pages.ts  panes.ts  pinned.ts  search.ts  selection.ts  settings.ts  state.ts  toast.ts
src/types/: area.ts  arrow.ts  link.ts  note.ts  page.ts
src/utils/: assets.ts  autoSections.ts  platform.ts  themeLoader.ts
